# NanoAI

./: .gitignore  CMakeLists.txt  README.md  build.bat  prepare.bat
examples/DetectorTest/: CMakeLists.txt  main.cpp
examples/test01/: CMakeLists.txt  main.cpp
ns_onnex/: CMakeLists.txt
ns_onnex/include/: CasDecoding.h  CasDenseEngine.h  CasDetectorOptions.h  CasOasisDetector.h  CasScoreEngine.h  OrtEngine.h  constants.h  ns_headers.h  ns_infer_export.h  types.h  utils.h
ns_onnex/src/: CasDecoding.cpp  CasDenseEngine.cpp  CasOasisDetector.cpp  CasScoreEngine.cpp  OrtEngine.cpp  utils.cpp
